--- a/ModernVulkanBlockGame/ModernVulkanBlockGame.vcxproj.filters
+++ b/ModernVulkanBlockGame/ModernVulkanBlockGame.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Sources\Graphics\PipelineCompiler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Sources\Graphics\Allocator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sources\Logging\Log.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Sources\Graphics\PipelineCompiler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Sources\Graphics\Vertex.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
